# mcpyida

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  ida-plugin.json  mcpyida_plugin.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md  installation.md  mcp-client-config.md  quickstart.md  tools-reference.md
docs/specs/: rpc-callbacks.md
examples/: type_tools_usage.py
src/mcpyida/: cli_status.py  custom_types_312.py  custom_types_p312.py  dispatch.py  headless.py  ida_helpers.py  installer.py  mcp2openapi.py  mcpserver.py  mcpyida.py  models.py  portspec.py  rpc_callbacks.py  rpc_types.py  server.py  util.py
src/mcpyida/ida_plugin/: mcpyida_proxy.py
src/mcpyida/tools/: __init__.py  analysis.py  cfg.py  core.py  modify.py  scripting.py  search.py  search_utils.py  types.py
tests/: conftest.py  test_structure_tools.py
tests/e2e/: conftest.py  exercise_notification.py  exercise_reentrant.py  exercise_self_dispatch.py  exercise_self_write.py  test_all_tools.py  test_cfg_callgraph.py  test_cli_status_e2e.py  test_concurrency.py  test_dual_interface.py  test_headless_launch.py  test_idb_path.py  test_port_range.py  test_rpc_callbacks.py
tests/fixtures/: Makefile  crackme.c  crackme.elf  struct_test.c  struct_test.elf  typed_fixture.c  typed_fixture.elf
tests/integration/: conftest.py  helpers.py  test_analysis.py  test_cfg.py  test_core.py  test_scripting.py  test_search.py  test_tool_contract.py
tests/unit/: conftest.py  test_batch.py  test_cfg_normalization.py  test_changelog_section.py  test_cli_status.py  test_dispatch.py  test_elicitation.py  test_headless_args.py  test_ida_plugin_manifest.py  test_idapro_optional.py  test_inject_plugin_version.py  test_list_types.py  test_models.py  test_plugin_entry_stub.py  test_portspec.py  test_rpc_callbacks.py  test_rpc_server_integration.py  test_rpc_types.py  test_search_utils.py  test_server_info.py  test_tool_schema.py  test_xrefs_contract.py
