[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mcpyida"
dynamic = ["version"]
description = "MCP server that exposes IDA Pro reverse-engineering capabilities to LLM clients."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Eric Lin", email = "17968842+anselor@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "asgi-lifespan",
    "fastapi",
    "mcp>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "anyio>=4.0.0",
    "mcp>=1.23.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.270",
]

[project.scripts]
mcpyida_install = "mcpyida.installer:install"
mcpyida-headless = "mcpyida.headless:main"

[project.urls]
"Homepage" = "https://github.com/nightwing-us/mcpyida"
"Repository" = "https://github.com/nightwing-us/mcpyida"
"Bug Tracker" = "https://github.com/nightwing-us/mcpyida/issues"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?P<version>[vV]?\\d+(?:\\.\\d+){0,3}[^\\+]*)(?:\\+.*)?$"
path = "src/mcpyida/_version.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/mcpyida/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpyida"]

[tool.isort]
profile = "pycharm"
indent = 4
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
import_heading_stdlib = "Standard Libraries"
import_heading_thirdparty = "Third Party Libraries"
import_heading_firstparty = "Our Libraries"
known_firstparty = "mcpyida"
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
use_parentheses = true
src_paths = ["src"]
skip = '.venv,venv,env,.nox,_version.py,build'

[tool.mypy]
# Gradual typing: enable the high-value checks but don't force annotations
# everywhere yet (--strict would emit ~300 errors against IDA-API-heavy code
# that only has Any-typed stubs). Tighten incrementally as files are
# annotated.
#
# warn_return_any is intentionally OFF: every wrapper around an IDA API
# call returns Any (the IDA stubs are all Any-typed), and silencing those
# at every return site would be ~80 surgical ignores. Re-enable once the
# IDA wrappers grow real annotations / cast() calls.
#
# warn_unreachable is similarly OFF: mypy flags Any-typed branches as
# unreachable when they actually depend on IDA runtime state. False
# positives outweigh real catches in this codebase.
warn_redundant_casts = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
mypy_path = "src"
packages = ["mcpyida"]
explicit_package_bases = true
namespace_packages = true

# Plugins must live at the top-level [tool.mypy] section (not in per-module
# overrides — mypy warns once per module if placed there).
plugins = ["pydantic.mypy"]

# Exclude the 3.12-only file: it uses PEP 695 `type X = ...` syntax that does
# not parse on Python 3.10/3.11. The pre-3.12 sibling custom_types_p312.py
# provides the same names via TypeAlias for those versions, so mypy never
# needs to read this file.
exclude = ['custom_types_312\.py$']

# IDA Pro's Python modules have no type stubs (and idalib is dlopen-loaded
# at runtime, so static analysis can't resolve it). Suppress the known-Any
# import-not-found family for the whole IDA surface area. Listed
# explicitly because mypy's glob support doesn't extend to top-level
# module names with underscores (e.g. "ida_*" doesn't match "ida_funcs").
[[tool.mypy.overrides]]
module = [
    "idapro",
    "idaapi",
    "idautils",
    "idc",
    "ida_allins",
    "ida_auto",
    "ida_bytes",
    "ida_cfg",
    "ida_dirtree",
    "ida_diskio",
    "ida_entry",
    "ida_enum",
    "ida_fixup",
    "ida_frame",
    "ida_func",
    "ida_funcs",
    "ida_gdl",
    "ida_graph",
    "ida_hexrays",
    "ida_ida",
    "ida_idp",
    "ida_kernwin",
    "ida_lines",
    "ida_loader",
    "ida_nalt",
    "ida_name",
    "ida_pro",
    "ida_search",
    "ida_segment",
    "ida_strlist",
    "ida_typeinf",
    "ida_ua",
    "ida_xref",
]
ignore_missing_imports = true

#[[plugin_tool.mypy.overrides]]
#module = ""
#ignore_missing_imports = true

[tool.ruff]
src = ["src"]
# custom_types_312.py uses PEP 695 `type` syntax which requires Python 3.12.
# The pre-3.12 sibling (custom_types_p312.py) covers 3.10/3.11 via TypeAlias.
# Exclude the 3.12-only file from ruff so lint runs against py310 cleanly.
extend-exclude = ["src/mcpyida/custom_types_312.py"]

[tool.coverage.run]
# Same rationale as ruff's exclude — coverage's parser is python-version
# bound and chokes on the PEP 695 `type` statement under py310/3.11.
omit = ["*/custom_types_312.py"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
quote-style = "single"
indent-style = "space"
line-ending = "lf"
preview = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120
max-doc-length = 80


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"